--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 *.unitypackage filter=lfs diff=lfs merge=lfs -text
 *.psd filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+*.dylib filter=lfs diff=lfs merge=lfs -text
